
 * Save highlight colours/labels per-file (#60).

 * Allow changing keyboard shortcuts (#226).

 * Add Shift+Enter shortcut for "OK" in the comment dialog (#226).

 * Display offset in both decimal and hexadecimal in status bar (#228).

 * Fix handling of relative paths specified on the command line when
   opening in an existing instance (#237).

Version 0.61.1 (2024-03-13):

 * Compare data from correct file offsets when "Collapse matches" option is
   enabled in compare window (#224).

Version 0.61.0 (2024-02-14)

 * Permit trailing commas in template enum definitions (#216).

 * Add overwrite/insert toggle to "Fill range" dialog (#213).

 * Add copy/export context menu commands to strings tool (#210).

 * Fix temporary hang in strings tool when processing large files (#217).

 * Fix settings not being saved during application exit.

 * Batch comments panel updates to improve responsiveness (#205).

 * Add search field to comments panel (#204).

 * Add bit editor tool.

 * Add checksum tool (#219).

 * Add options to search for floating point values.

 * Don't reload files modified externally when requested not to.

 * Start search when Enter is pressed in search dialog input field, or search
   backwards when Shift+Enter is pressed.

 * Add "Reload automatically" toggle to "File" menu to automatically reload
   the file when modified externally (and not in the editor) (#222).

 * Preserve scroll position when reloading file.

Version 0.60.1 (2023-07-28)

 * Install missing parts of binary template plugin.

Version 0.60.0 (2023-07-28)

 * Add data histogram tool (#140).

 * Use virtual offsets in "Select range" dialog.

 * Don't re-open files to save when there are no changes (#193).

 * Remember recently selected templates (#183).

 * Fix crash when running rehex for the first time on some systems (#194).

 * Correctly draw insert cursor over highlighted data and at the end of the
   file (#196).
