@@ -25,6 +25,8 @@ Version TBC:
  * Fix handling of relative paths specified on the command line when
    opening in an existing instance (#237).
 
+ * Allow navigating hex data by nibbles rather than bytes (#58).
+
 Version 0.61.1 (2024-03-13):
 
  * Compare data from correct file offsets when "Collapse matches" option is
